--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 <li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the School of AI programme 2020, hosted by Pi School</a>.</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected to participate in the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
 <li>2019/11 - <a href="http://vimp.math.unipd.it/people.html" target="_blank">Winner of a scholarship by Fondecyt Peru for a research stay at the University of Padua, Italy</a>.</li>
-<li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at the UNMSM.</li>
+<li>2019/11 - Glad to give a talk about AI in Healtcare at the faculty of Pharmacy and Biochemistry, at the UNMSM.</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019" target="_blank">Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</a>.</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters" target="_blank">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a>.</li>
 <li>2019/10 - <a href="https://www.springer.com/gp/book/9783030575656" target="_blank">Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</a>.</li>
@@ -213,7 +213,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-03-2021 05:48 GMT <br/> 
+Website updated 04-03-2021 05:54 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
