--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 <li>2020/07 - Invited by IEEE SPS UNI to give a workshop: "Deep Learning: Fundamentos y Aplicaciones".</li>
 <li>2020/07 - Invited by my faculty FIEE UNI to give a talk about my experience in research internships abroad.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers" target="_blank">My third paper was selected for poster presentation at HSYS workshop at the ICML 2020</a>.</li>
-<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/" target="_blank">My two papers were accepted for oral & poster presentations at ML4GH workshop at the ICML 2020</a>.</li>
+<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/" target="_blank">My two papers were accepted for oral and poster presentation at ML4GH workshop at the ICML 2020</a>.</li>
 <li>2020/06 - Thankful for winning a 'LatinX in AI' grant for my participation in the prestigious ICML 2020.</li>
 <li>2020/06 - <a href="https://acl2020.org/" target="_blank">Grateful for winning a grant for the ACL 2020, the best conference about natural language processing</a>.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8" target="_blank">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a>.</li>
@@ -213,7 +213,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-03-2021 09:18 GMT <br/> 
+Website updated 04-03-2021 09:20 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
