--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 <h2>News</h2>
 <p>
 <ul>
-<li>2021/03 - <a href="https://opencv.org/opencv-ai-competition-2021/" target="_blank">Our team 'Vigilare' won the phase 1 of the OpenCV AI Competition, congts Dari, Bernick and Jhonny!</a>.</li>
+<li>2021/03 - <a href="https://opencv.org/opencv-ai-competition-2021/" target="_blank">Our team 'Vigilare' won the Phase 1 of the OpenCV AI Competition, congts Dari, Bernick and Jhonny!</a>.</li>
 <li>2021/03 - <a href="https://sites.google.com/view/sedl-workshop" target="_blank">Selected as reviewer for the Science and Engineering of Deep Learning Workshop at ICLR 2021</a>.</li>
 <li>2021/02 - <a href="http://www.patronatouni.org.pe/es/resultados-de-beca/item/110-resultado-de-convocatoria-de-beca-alberto-benavides-de-la-quintana-embajada-de-francia-prouni-2021.html" target="_blank">Glad to have won the ‘Alberto Benavides de la Quintana - France Embassy’ master’s scholarship</a>.</li>
 <li>2021/01 - Invited as mentor and to give a talk at the "III Peruvian Deep Learning Symposium (SPDL)".</li>
@@ -213,7 +213,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-03-2021 09:28 GMT <br/> 
+Website updated 04-03-2021 09:29 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
