--- a/pre.html
+++ b/pre.html
@@ -52,7 +52,7 @@
 <li><a href="/research/research.html">Research</a></li>
 <li><a href="/posts/posts.html">Posts</a></li>
 <li><a href="/contact/contact.html">Contact</a></li>
-<li><a href="/cv/cv.html">CV</a></li>
+<li><a href="/curriculum/curriculum.html">Curriculum</a></li>
 </ul>
 <div class="clearer">&nbsp;</div>
 </div>
