--- a/cv/cv.html
+++ b/cv/cv.html
@@ -64,12 +64,12 @@
 <br/>
 <h2>Curriculum Vitae</h2>
 <br/>
-<h3>CV in English:</h3>
+<h3>Curriculum Vitae in English:</h3>
 <p> 
 &nbsp &nbsp [<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
 </p>
 <br/>
-<h3>CV in Spanish:</h3>
+<h3>Curriculum Vitae in Spanish:</h3>
 <p> 
 &nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
 </p>
@@ -98,7 +98,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 05-03-2021 09:12 GMT <br/> 
+Website updated 05-03-2021 09:13 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
