--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -73,15 +73,15 @@
 <div class="row">
 <div class="oneThird">
     <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg"></img>
-    <p>Caption</p>
+    <p>Caption caption caption caption caption caption</p>
 </div>
 <div class="oneThird">
     <img src="https://dennishnf.com/gallery/2013_10__robot2.jpg"></img>
-    <p>Caption</p>
+    <p>Caption caption caption caption caption</p>
 </div>
 <div class="oneThird">
     <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg"></img>
-    <p>Caption</p>
+    <p>Caption caption caption caption caption caption</p>
 </div>
 </div>
 </p>
@@ -129,7 +129,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;07:45 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;07:46 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
