--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -65,6 +65,8 @@
 <br/>
 <h2>Gallery</h2>
 <br/>
+<p> 
+<div class="row">
 <main class="grid">
 
 <div class="oneThird">
@@ -95,6 +97,8 @@
   </div>
 
 </main>
+</div>
+</p>
 <br/>
 
 <br/>
@@ -120,7 +124,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:40 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:42 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
