--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -86,7 +86,7 @@
 <main class="grid">
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__robot1.jpg" alt="Sample photo">
-  <p>Caption caption caption caption caption caption</p>
+  <p style="text-align:center">Caption caption caption caption caption caption</p>
   </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__neurips2019.jpg" alt="Sample photo">
@@ -140,7 +140,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:47 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;08:52 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
