--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -71,8 +71,7 @@
 <main class="grid">
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2020_03__belgium_attomium.jpg" alt="Sample photo">
-  <p style="text-align:center">The Attomium</p>
-  <p style="text-align:center">Brussels, Belgium. 2020 March.</p>
+  <p style="text-align:center">The Attomium</p><p style="text-align:center">Brussels, Belgium. 2020 March.</p>
   </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__peru_robot1.jpg" alt="Sample photo">
@@ -141,7 +140,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;09:03 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;09:04 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
