--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -106,6 +106,10 @@
   <p style="text-align:center">Informatyk Faculty. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2015_08__peru_graduation.jpg" alt="Sample photo">
+  <p style="text-align:center">Graduation ceremony. <br> Lima, Peru. <br> 2015 August.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2013_10__peru_robot2.jpg" alt="Sample photo">
   <p style="text-align:center">Summo robot. <br> Lima, Peru. <br> 2013 October.</p>
 </div>
@@ -141,7 +145,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:03 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;10:05 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
