--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -137,6 +137,10 @@
   <img src="https://dennishnf.com/gallery/2013_10__peru_robot1.jpg" alt="Sample photo">
   <p style="text-align:center">Summo robot. <br> Lima, Peru. <br> 2013 October.</p>
 </div>
+<div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2013_04__peru_talkieeeuni.jpg" alt="Sample photo">
+  <p style="text-align:center">Giving a talking on Neural Networks at FIEE UNI. <br> Lima, Peru. <br> 2013 April.</p>
+</div>
 </main>
 <!-------------------->
 </div>
@@ -165,7 +169,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;18:50 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;18:58 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
