--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -118,6 +118,10 @@
   <p style="text-align:center">The ICML 2019 conference. <br> Long Beach, USA. <br> 2019 June.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2017_03__poland_unesco.jpg" alt="Sample photo">
+  <p style="text-align:center">Closing ceremony of the UNESCO Fellowship. <br> Krakow, Poland. <br> 2017 March.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03__poland_naorobot.jpg" alt="Sample photo">
   <p style="text-align:center">Nao Humanoid Robot. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
@@ -169,7 +173,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;19:03 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;19:07 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
