--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -94,6 +94,10 @@
   <p style="text-align:center">Walking around Zurich. <br> Zurich, Switzerland. <br> 2020 January.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_12__peru_papaschota.jpg" alt="Sample photo">
+  <p style="text-align:center">My parents and me. <br> Chota, Peru. <br> 2019 December.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12__canada_neurips2019.jpg" alt="Sample photo">
   <p style="text-align:center">Participating at the NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
 </div>
@@ -173,7 +177,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;19:16 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;19:22 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
