--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -71,7 +71,7 @@
 <main class="grid">
 <div class="oneThird">
 
-<video width="200" controls>
+<video controls>
   <source src="https://dennishnf.github.io/posts/projects/2017-04_basic-hand-pose-recognition-system-on-a-pc-using-cnns/hanposture.mp4" type="video/mp4">
   <source src="https://dennishnf.github.io/posts/projects/2017-04_basic-hand-pose-recognition-system-on-a-pc-using-cnns/hanposture.mp4" type="video/ogg">
   Your browser does not support HTML video.
