--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -70,14 +70,8 @@
 <!-------------------->
 <main class="grid">
 <div class="oneThird">
-
-<video controls>
-  <source src="https://dennishnf.github.io/posts/projects/2017-04_basic-hand-pose-recognition-system-on-a-pc-using-cnns/hanposture.mp4" type="video/mp4">
-  <source src="https://dennishnf.github.io/posts/projects/2017-04_basic-hand-pose-recognition-system-on-a-pc-using-cnns/hanposture.mp4" type="video/ogg">
-  Your browser does not support HTML video.
-</video>
+  <img src="https://dennishnf.com/gallery/2021_04__peru_chota2.jpg" alt="Sample photo">
   <p style="text-align:center">My hometown, Chota. <br> Chota, Peru. <br> 2021 April.</p>
-
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2021_04__peru_chota1.jpg" alt="Sample photo">
@@ -183,7 +177,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;20:39 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-04-27&nbsp;&nbsp;20:48 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
