--- a/pre.html
+++ b/pre.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="/reset.css" media="screen">
 <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
 <!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="ie_fixes.css" media="screen" /><![endif]-->
-<title>Dennis Núñez Fernández</title>
+<title>Dennis Núñez-Fernández</title>
 
 <!-- Favicon of the website -->
 <link rel="shortcut icon" href="/icon.ico?" type="image/x-icon" />
