--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -127,7 +127,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03_30__poland_informatyk.jpg">
-  <p style="text-align:center">Informatyk Faculty. <br> Krakow, Poland. <br> 2017 March.</p>
+  <p style="text-align:center">Faculty of Computer Science and Electronics, AGH UST. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03_27__poland_unesco.jpg">
@@ -177,7 +177,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;11:50 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;11:52 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
